Completed stretch goals, added styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <script src="jquery.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
+
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+    <h2>Show me the money!</h2>
+    <button id="bonusCalc"> Calculate Bonus</button>
+    <div id="results">
+    <ul id="employeeOutput">
+      <!-- info input here -->
+      
+    </ul>
+  </div>
   </body>
+
 </html>
